--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
       <artifactId>jgrapht-core</artifactId>
       <version>1.3.0</version>
     </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
   </dependencies>
 
 </project>
