--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
         <version>RELEASE</version>
         <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.10</version>
+    </dependency>
   </dependencies>
 
 </project>
